Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36762

QWebSocket emits multiplied signals when socket was reopened

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0
    • 5.3.0
    • WebSockets
    • None
    • I239bdd06252fb90056a687ace8540bb91b0055a1

      If I call QWebSocket::open() after previous call of QWebSocket::close() the signal textFrameReceived() will be emitted twice for every message.
      It seems like in QWebSocketPrivate::releaseConnections() wrong overloaded version of QObject::disconnect() was used.

        For Gerrit Dashboard: QTBUG-36762
        # Subject Branch Project Status CR V

            kurt.pattyn Kurt Pattyn
            hungrylion Lev Golod
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes